--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "eslint-plugin-vue": "^5.2.3",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6"
   },
