--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-vue": "^5.2.3",
     "webpack": "4.39.1",
-    "webpack-cli": "3.3.6"
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.8.0"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "babel-eslint": "^10.0.2"
   }
 }
